# mdocfile

./: .github_changelog_generator  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build-and-deploy-docs.yml  ci.yml  test_and_deploy.yml
docs/: index.md  writing.md
mdocfile/: __init__.py  data_models.py  functions.py  global_data.py  image.py  mdoc.py  section_data.py  utils.py
search/: search_index.json
src/mdocfile/: __init__.py  data_models.py  functions.py  utils.py
tests/: conftest.py  test_data_models.py  test_functions.py  test_global_data.py  test_mdoc.py  test_read.py  test_section_data.py
tests/test_data/: TS_01.mrc.mdoc  frame_set_multiple.mdoc  frame_set_single.mdoc  montage_section.mdoc  montage_section_multiple.mdoc  tilt_series.mdoc
writing/: index.html
